--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.4.4",
     "@mui/styled-engine-sc": "^5.4.2",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -33,11 +34,11 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.6.1",
     "react-s3": "^1.3.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-scroll-to-top": "^3.0.0",
     "react-slick": "^0.28.1",
     "react-spinners": "^0.13.7",
-    "react-toastify": "^9.1.1",
+    "react-toastify": "^9.0.3",
     "recharts": "^2.3.2",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
