--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 
 REACT_APP_BASE_URL="http://dev.wadinushakal.com/"
+REACT_APP_AWS_BUCKET_NAME="meditech-products"
+REACT_APP_AWS_REGION="ap-northeast-1"
+REACT_APP_AWS_ACCESS_KEY_ID="AKIA2GGOXYXVJBADABN5"
+REACT_APP_AWS_SCRET_ACCESS_KEY="bvsMtgOK6qMVwsHo7kWl3sPxMdehAWJAJY5uWrxa"
