--- a/.env
+++ b/.env
@@ -1,6 +1,14 @@
 
-REACT_APP_BASE_URL="http://dev.wadinushakal.com/"
-REACT_APP_AWS_BUCKET_NAME="meditech-products"
+# REACT_APP_BASE_URL="http://dev.wadinushakal.com/"
+# REACT_APP_AWS_BUCKET_NAME="meditech-products"
+# REACT_APP_AWS_REGION="ap-northeast-1"
+# REACT_APP_AWS_ACCESS_KEY_ID="AKIA2GGOXYXVJBADABN5"
+# REACT_APP_AWS_SCRET_ACCESS_KEY="bvsMtgOK6qMVwsHo7kWl3sPxMdehAWJAJY5uWrxa"
+
+# prod
+
+REACT_APP_BASE_URL="http://ec2-54-238-194-155.ap-northeast-1.compute.amazonaws.com/"
+REACT_APP_AWS_BUCKET_NAME="djangopets-prod"
 REACT_APP_AWS_REGION="ap-northeast-1"
-REACT_APP_AWS_ACCESS_KEY_ID="AKIA2GGOXYXVJBADABN5"
-REACT_APP_AWS_SCRET_ACCESS_KEY="bvsMtgOK6qMVwsHo7kWl3sPxMdehAWJAJY5uWrxa"
+REACT_APP_AWS_ACCESS_KEY_ID="AKIAQ3EGSZ74UKF3BSM7"
+REACT_APP_AWS_SCRET_ACCESS_KEY="YPpahxqpK/ubVgMLbGPiQgeFp0Ki2qhzl0GyOek5"
